# gather

./: .gitignore  Cargo.toml  README.md  azure-pipeline.yml
app/: package.json
app/public/: index.html
app/src/: App.js  Constants.js  Footer.js  Home.js  MenuBar.js  dummyData.js  index.js  theme.js
app/src/components/: BlockNumber.js  Footer.js  Header.js  NodeInfo.js
app/src/components/cards/: CardBase.js  CardGrid.js
app/src/components/forms/: AccessForm.js  CreateEvent.js  CreateGroup.js  EventForm.js  GroupForm.js  datetimepicker.js
app/src/components/general/: Footer.js  Header.js  LoadingModal.js  MemberStub.js  Slides.js  StandardGrid.js  TopBanner.js
app/src/components/pages/: About.js  ViewEvent.js  ViewGroup.js
app/src/containers/: AppWrapper.js  CreateEventContainer.js  CreateGroupContainer.js  EditEventContainer.js  EditGroupContainer.js  EventsPageContainer.js  GroupsPageContainer.js  Home.js  HomeContainer.js  LoginContainer.js  SignupContainer.js  UIMasterPage.js  ViewEventContainer.js  ViewGroupContainer.js
app/src/services/: SingletonStore.js  gatherService.js  ipfsService.js  substrateService.js  types.js  types.json  userService.js
assets/: email-notification-template.html  email-rsvp-template.html
assets/genesis/: QmZG2mGFH7fuzhF3B6xnEv8wYZJ8Rirvmg3AyDRnHPoabu.json  QmbUkpLwGNufh3s5HT9QfSwx1ZCfbAoKx2iRd4cpQT8d79.json  QmcUjutTB8kGBe7SgZ3pwCU4Q9XACceQ5gNwfLTJrLjk3b.json  QmeecVsrGYzaLoMigaXdWEJrnShSRpSSx3D6ZbN7LxdSY5.json  QmfESjfnQx9Af2BidAuHsov4bEp5bAA87wzxJqmk7bnsYN  test.json
lib/emailer/: Cargo.toml
lib/emailer/src/: config.rs  lib.rs
res/: demo.json
runtime/: Cargo.toml
runtime/src/: gather.rs  haski.rs  lib.rs
src/: chain_spec.rs  cli.rs  config.rs  email.rs  main.rs  rpc.rs  service.rs
templates/emails/html/: confirm-email.hbs
templates/emails/titles/: confirm-email.hbs  new-gathering.hbs  rsvped.hbs
