[profile.release]
panic = 'unwind'

[[bin]]
name = 'gather'
path = 'src/main.rs'

[workspace]
members = ['runtime']

[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
name = 'gather'
version = '2.0.0'

[build-dependencies]
vergen = '3.0.4'

[dependencies]
derive_more = '0.15.0'
exit-future = '0.1.4'
futures = '0.1.29'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'
jsonrpc-core = '13.2.0'
jsonrpc-core-client = '13.2.0'
jsonrpc-derive = '13.2.0'

[dependencies.serde]
features = ['derive']
version = '1.0.101'

[dependencies.aura]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '837d9fa05'

[dependencies.srml-system-rpc]
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system-rpc'
rev = '837d9fa05'

[dependencies.substrate-rpc]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-rpc'
rev = '837d9fa05'

[dependencies.substrate-offchain]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain'
rev = '837d9fa05'

[dependencies.aura-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '837d9fa05'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '837d9fa05'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = '837d9fa05'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = '837d9fa05'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '837d9fa05'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '837d9fa05'

[dependencies.gather-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '837d9fa05'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '837d9fa05'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '837d9fa05'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '837d9fa05'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '837d9fa05'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '837d9fa05'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '837d9fa05'