[profile.release]
panic = 'unwind'

[[bin]]
name = 'gather'
path = 'src/main.rs'

[workspace]
members = ['runtime', 'lib/emailer']

[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
name = 'gather'
version = '2.0.0'

[build-dependencies]
vergen = '3.0.4'

[dependencies]
derive_more = '0.15.0'
exit-future = '0.1.4'
futures = '0.1.29'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'
jsonrpc-core = '13.2.0'
jsonrpc-core-client = '13.2.0'
jsonrpc-derive = '13.2.0'
rand = "0.7.2"

# for emailing support
toml = "0.5"
lettre = { version= "0.9", features=["serde-impls"] }
lettre_email = "0.9"

# ipfs helpers
cid = "0.3.1"

[dependencies.serde]
features = ['derive']
version = '1.0.101'

[dependencies.serde_json]
version = '1.0.41'

[dependencies.aura]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'


[dependencies.srml-system-rpc]
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system-rpc'


[dependencies.substrate-rpc]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-rpc'


[dependencies.substrate-offchain]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain'


[dependencies.aura-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'


[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'


[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'


[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'


[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'


[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'


[dependencies.gather-runtime]
path = 'runtime'

[dependencies.gather-emailer]
path = 'lib/emailer'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'


[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'


[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'


[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'


[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'


[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'


[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
