[package]
authors = ['Anonymous']
edition = '2018'
name = 'gather-runtime'
version = '2.0.0'

[dependencies.reqwest]
optional = true
version  = "0.9.22"

[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.2'

[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-aura'
rev = '837d9fa05'

[dependencies.aura-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'substrate-consensus-aura-primitives'
rev = '837d9fa05'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-balances'
rev = '837d9fa05'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'substrate-client'
rev = '837d9fa05'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-executive'
rev = '837d9fa05'

[dependencies.grandpa]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-grandpa'
rev = '837d9fa05'

[dependencies.system-rpc-runtime-api]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-system-rpc-runtime-api'
rev = '837d9fa05'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-indices'
rev = '837d9fa05'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate'
package = 'substrate-offchain-primitives'
rev = '837d9fa05'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'substrate-primitives'
rev = '837d9fa05'

[dependencies.randomness-collective-flip]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-randomness-collective-flip'
rev = '837d9fa05'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'sr-std'
rev = '837d9fa05'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'sr-io'
rev = '837d9fa05'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate'
rev = '837d9fa05'

[dependencies.substrate-session]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = '837d9fa05'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-sudo'
rev = '837d9fa05'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-support'
rev = '837d9fa05'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-system'
rev = '837d9fa05'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-timestamp'
rev = '837d9fa05'

[dependencies.transaction-payment]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-transaction-payment'
rev = '837d9fa05'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'sr-version'
rev = '837d9fa05'

[features]
default = ['std']
std = [
    'codec/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'aura/std',
    'aura-primitives/std',
    'grandpa/std',
    'executive/std',
    'indices/std',
    'primitives/std',
    'sr-primitives/std',
    'randomness-collective-flip/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'transaction-payment/std',
    'version/std',
    'serde',
    'reqwest',
    'safe-mix/std',
    'offchain-primitives/std',
    'substrate-session/std',
    'system-rpc-runtime-api/std',
]