[package]
authors = ['Anonymous']
edition = '2018'
name = 'gather-runtime'
version = '2.0.0'

[dependencies.reqwest]
optional = true
version  = "0.9.22"

[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.2'

[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-aura'
rev = 'd521bb573'

[dependencies.aura-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'substrate-consensus-aura-primitives'
rev = 'd521bb573'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-balances'
rev = 'd521bb573'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'substrate-client'
rev = 'd521bb573'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-executive'
rev = 'd521bb573'

[dependencies.grandpa]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-grandpa'
rev = 'd521bb573'

[dependencies.system-rpc-runtime-api]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-system-rpc-runtime-api'
rev = 'd521bb573'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-indices'
rev = 'd521bb573'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate'
package = 'substrate-offchain-primitives'
rev = 'd521bb573'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'substrate-primitives'
rev = 'd521bb573'

[dependencies.randomness-collective-flip]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-randomness-collective-flip'
rev = 'd521bb573'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'sr-std'
rev = 'd521bb573'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'sr-io'
rev = 'd521bb573'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate'
rev = 'd521bb573'

[dependencies.substrate-session]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'd521bb573'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-sudo'
rev = 'd521bb573'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-support'
rev = 'd521bb573'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-system'
rev = 'd521bb573'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-timestamp'
rev = 'd521bb573'

[dependencies.transaction-payment]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-transaction-payment'
rev = 'd521bb573'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'sr-version'
rev = 'd521bb573'

[features]
default = ['std']
std = [
    'codec/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'aura/std',
    'aura-primitives/std',
    'grandpa/std',
    'executive/std',
    'indices/std',
    'primitives/std',
    'sr-primitives/std',
    'randomness-collective-flip/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'transaction-payment/std',
    'version/std',
    'serde',
    'reqwest',
    'safe-mix/std',
    'offchain-primitives/std',
    'substrate-session/std',
    'system-rpc-runtime-api/std',
]