[package]
authors = ['Anonymous']
edition = '2018'
name = 'gather-runtime'
version = '2.0.0'

[dependencies]
safe-mix = { default-features = false, version = '1.0.0' }
serde = { features = ['derive'], optional = true, version = '1.0.101' }
serde_json = { optional = true,  version = '1.0.41' }
gather-emailer = { optional = true, path = "../lib/emailer" }

[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.2'

[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-aura'


[dependencies.aura-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'substrate-consensus-aura-primitives'


[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-balances'


[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'substrate-client'


[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-executive'


[dependencies.grandpa]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-grandpa'


[dependencies.system-rpc-runtime-api]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-system-rpc-runtime-api'


[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-indices'


[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate'
package = 'substrate-offchain-primitives'


[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'substrate-primitives'


[dependencies.randomness-collective-flip]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-randomness-collective-flip'


[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'sr-std'


[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'sr-io'


[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate'


[dependencies.substrate-session]
default-features = false
git = 'https://github.com/paritytech/substrate'


[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-sudo'


[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-support'


[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-system'


[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-timestamp'


[dependencies.transaction-payment]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'srml-transaction-payment'


[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate'
package = 'sr-version'


[features]
default = ['std']
std = [
    'codec/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'aura/std',
    'aura-primitives/std',
    'grandpa/std',
    'executive/std',
    'indices/std',
    'primitives/std',
    'sr-primitives/std',
    'randomness-collective-flip/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'transaction-payment/std',
    'version/std',
    'serde',
    'serde_json',
    'gather-emailer',
    'safe-mix/std',
    'offchain-primitives/std',
    'substrate-session/std',
    'system-rpc-runtime-api/std',
]